# ui-on-the-fly

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
templates/: admin.html
