[project]
name = "ui-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.2,<0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=1.10.13,<2.0.0",
    "python-dotenv>=1.0.0",
    "cerebras-cloud-sdk>=1.50.1",
    "sqlalchemy>=2.0.43",
]
